Source/WebCore/platform/graphics/avfoundation/objc/ImageDecoderAVFObjC.h
@@ -38,8 +38,6 @@ OBJC_CLASS AVAssetReader;
 OBJC_CLASS AVURLAsset;
 OBJC_CLASS WebCoreSharedBufferResourceLoaderDelegate;
 typedef struct opaqueCMSampleBuffer* CMSampleBufferRef;
-typedef struct OpaqueVTImageRotationSession* VTImageRotationSessionRef;
-typedef struct __CVPixelBufferPool* CVPixelBufferPoolRef;
 
 namespace WTF {
 class MediaTime;
@@ -49,6 +47,7 @@ namespace WebCore {
 
 class ContentType;
 class ImageDecoderAVFObjCSample;
+class ImageRotationSessionVT;
 class PixelBufferConformerCV;
 class WebCoreDecompressionSession;
 
@@ -90,14 +89,6 @@ public:
     bool isAllDataReceived() const final { return m_isAllDataReceived; }
     void clearFrameBufferCache(size_t) final;
 
-    struct RotationProperties {
-        bool flipX { false };
-        bool flipY { false };
-        unsigned angle { 0 };
-
-        bool isIdentity() const { return !flipX && !flipY && !angle; }
-    };
-
 private:
     ImageDecoderAVFObjC(SharedBuffer&, const String& mimeType, AlphaOption, GammaAndColorProfileOption);
 
@@ -116,8 +107,7 @@ private:
     RetainPtr<AVURLAsset> m_asset;
     RetainPtr<AVAssetTrack> m_track;
     RetainPtr<WebCoreSharedBufferResourceLoaderDelegate> m_loader;
-    RetainPtr<VTImageRotationSessionRef> m_rotationSession;
-    RetainPtr<CVPixelBufferPoolRef> m_rotationPool;
+    std::unique_ptr<ImageRotationSessionVT> m_imageRotationSession;
     Ref<WebCoreDecompressionSession> m_decompressionSession;
     WTF::Function<void(EncodedDataStatus)> m_encodedDataStatusChangedCallback;
 
@@ -126,7 +116,6 @@ private:
     Lock m_sampleGeneratorLock;
     bool m_isAllDataReceived { false };
     Optional<IntSize> m_size;
-    Optional<RotationProperties> m_rotation;
 };
 
 }
