Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.h
@@ -58,6 +58,7 @@ class AudioSourceProviderAVFObjC;
 class AudioTrackPrivateAVFObjC;
 class CDMInstanceFairPlayStreamingAVFObjC;
 class CDMSessionAVFoundationObjC;
+class ImageRotationSessionVT;
 class InbandMetadataTextTrackPrivateAVF;
 class MediaSelectionGroupAVFObjC;
 class PixelBufferConformerCV;
@@ -325,6 +326,7 @@ private:
     Vector<String> preferredAudioCharacteristics() const;
 
     void setShouldDisableSleep(bool) override;
+    void updateRotationSession();
 
     Optional<VideoPlaybackQualityMetrics> videoPlaybackQualityMetrics() final;
 
@@ -360,6 +362,7 @@ private:
     RetainPtr<CVPixelBufferRef> m_lastPixelBuffer;
     RetainPtr<CGImageRef> m_lastImage;
     BinarySemaphore m_videoOutputSemaphore;
+    std::unique_ptr<ImageRotationSessionVT> m_imageRotationSession;
     std::unique_ptr<VideoTextureCopierCV> m_videoTextureCopier;
 #endif
 
