Source/WebCore/platform/mediastream/mac/RealtimeOutgoingVideoSourceCocoa.mm
@@ -28,6 +28,8 @@
 
 #if USE(LIBWEBRTC)
 
+#import "AffineTransform.h"
+#import "ImageRotationSessionVT.h"
 #import "Logging.h"
 #import "MediaSample.h"
 #import "PixelBufferConformerCV.h"
@@ -49,19 +51,17 @@ RetainPtr<CVPixelBufferRef> RealtimeOutgoingVideoSourceCocoa::convertToYUV(CVPix
     return m_pixelBufferConformer->convert(pixelBuffer);
 }
 
-static inline void computeRotatedWidthAndHeight(CVPixelBufferRef pixelBuffer, webrtc::VideoRotation rotation, size_t& width, size_t& height)
+static inline unsigned rotationToAngle(webrtc::VideoRotation rotation)
 {
     switch (rotation) {
     case webrtc::kVideoRotation_0:
-    case webrtc::kVideoRotation_180:
-        width = CVPixelBufferGetWidth(pixelBuffer);
-        height = CVPixelBufferGetHeight(pixelBuffer);
-        return;
+        return 0;
     case webrtc::kVideoRotation_90:
+        return 90;
+    case webrtc::kVideoRotation_180:
+        return 180;
     case webrtc::kVideoRotation_270:
-        width = CVPixelBufferGetHeight(pixelBuffer);
-        height = CVPixelBufferGetWidth(pixelBuffer);
-        return;
+        return 270;
     }
 }
 
@@ -72,60 +72,13 @@ RetainPtr<CVPixelBufferRef> RealtimeOutgoingVideoSourceCocoa::rotatePixelBuffer(
         return pixelBuffer;
 
     if (!m_rotationSession || rotation != m_currentRotationSessionAngle) {
-        VTImageRotationSessionRef rawRotationSession = nullptr;
-        auto status = VTImageRotationSessionCreate(kCFAllocatorDefault, rotation, &rawRotationSession);
-        if (status != noErr) {
-            ERROR_LOG(LOGIDENTIFIER, "Failed creating a rotation session with error ", status);
-            return nullptr;
-        }
-
-        m_rotationSession = adoptCF(rawRotationSession);
-        m_currentRotationSessionAngle = rotation;
-
-        VTImageRotationSessionSetProperty(rawRotationSession, kVTImageRotationPropertyKey_EnableHighSpeedTransfer, kCFBooleanTrue);
+        IntSize size = { (int)CVPixelBufferGetWidth(pixelBuffer) , (int)CVPixelBufferGetHeight(pixelBuffer) };
+        AffineTransform transform;
+        transform.rotate(rotationToAngle(rotation));
+        m_rotationSession = std::make_unique<ImageRotationSessionVT>(WTFMove(transform), size, CVPixelBufferGetPixelFormatType(pixelBuffer), ImageRotationSessionVT::IsCGImageCompatible::No);
     }
 
-    size_t rotatedWidth, rotatedHeight;
-    computeRotatedWidthAndHeight(pixelBuffer, rotation, rotatedWidth, rotatedHeight);
-    auto format = CVPixelBufferGetPixelFormatType(pixelBuffer);
-    if (!m_rotationPool || rotatedWidth != m_rotatedWidth || rotatedHeight != m_rotatedHeight || format != m_rotatedFormat) {
-        auto pixelAttributes = @{
-            (__bridge NSString *)kCVPixelBufferWidthKey: @(rotatedWidth),
-            (__bridge NSString *)kCVPixelBufferHeightKey: @(rotatedHeight),
-            (__bridge NSString *)kCVPixelBufferPixelFormatTypeKey: @(format),
-            (__bridge NSString *)kCVPixelBufferCGImageCompatibilityKey: @NO,
-        };
-
-        CVPixelBufferPoolRef pool = nullptr;
-        auto status = CVPixelBufferPoolCreate(kCFAllocatorDefault, nullptr, (__bridge CFDictionaryRef)pixelAttributes, &pool);
-
-        if (status != kCVReturnSuccess) {
-            ERROR_LOG(LOGIDENTIFIER, "Failed creating a pixel buffer pool with error ", status);
-            return nullptr;
-        }
-        m_rotationPool = adoptCF(pool);
-
-        m_rotatedWidth = rotatedWidth;
-        m_rotatedHeight = rotatedHeight;
-        m_rotatedFormat = format;
-    }
-
-    CVPixelBufferRef rawRotatedBuffer = nullptr;
-    auto status = CVPixelBufferPoolCreatePixelBuffer(kCFAllocatorDefault, m_rotationPool.get(), &rawRotatedBuffer);
-
-    if (status != kCVReturnSuccess) {
-        ERROR_LOG(LOGIDENTIFIER, "Failed creating a pixel buffer with error ", status);
-        return nullptr;
-    }
-    RetainPtr<CVPixelBufferRef> rotatedBuffer = adoptCF(rawRotatedBuffer);
-
-    status = VTImageRotationSessionTransferImage(m_rotationSession.get(), pixelBuffer, rotatedBuffer.get());
-
-    if (status != noErr) {
-        ERROR_LOG(LOGIDENTIFIER, "Failed rotating with error ", status, " for rotation ", m_currentRotation);
-        return nullptr;
-    }
-    return rotatedBuffer;
+    return m_rotationSession->rotate(pixelBuffer);
 }
 
 } // namespace WebCore
